--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,15 +9,23 @@ on:
       - master
 
 jobs:
-  drive:
-    runs-on: windows-latest
+  build:
 
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/chekout@v3
-
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        # This is the version of the action for setting up Python, not the Python version.
+        uses: actions/setup-python@v5
+        with:
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          architecture: 'x64'
       - name: Install dependencies
         run: python -m pip install pytest .
 
       - name: Run test
         run: pytest
+
+
