--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
           # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
       - name: Install dependencies
-        run: python -m pip install pytest .
+        run: python -m pip install pytest
 
       - name: Run test
         run: pytest
